--- a/index.html
+++ b/index.html
@@ -281,7 +281,243 @@
             </div>
             </ul>
         </section>
+        
+        <section>
+            <div>
+            <h2>Casas e apartamentos que os hóspedes amam</h2>
+            <button>
+                <a href="https://www.booking.com/booking-home/index.pt-br.html?aid=39759">
+                    Descubra casas e apartamentos
+                </a>
+            </button>
+        </div>
+                <ul>
+                    <li>
+                        <a href="https://www.booking.com/searchresults.html?aid=2247829&sid=9255ad95b2bd9f045f0bae3df14c2f99&dest_id=-510625&dest_type=city&highlighted_hotels=260295&nflt=ht_id%3D228%3Bht_id%3D220%3Bht_id%3D213%3Bht_id%3D219%3Bht_id%3D209%3Bht_id%3D222%3Bht_id%3D201%3Bht_id%3D224%3Bht_id%3D214%3Bht_id%3D208%3Bht_id%3D232%3Bht_id%3D212%3Bht_id%3D229%3Bht_id%3D215%3Bht_id%3D223%3Bht_id%3D210%3Bht_id%3D230%3Bht_id%3D216%3Bht_id%3D227&amp;bhc_from_index=1">
+                        <img src="https://cf.bstatic.com/xdata/images/hotel/max500/103951224.jpg?k=03736dd4e1e89c1132e4957149e394d01ac6e8f64f4b09e30ade97a6176f0640&o=)" alt="Aparthotel Stare Miasto">
+                        <div>
+                            <h5>Aparthotel Stare Miasto</h5>
+                            <p>Cracóvia</p>
+                            <p>A partir de <strong>R$ 427</strong></p>
+                        </div>
+                        <div>
+                            <span>8,7</span>
+                            <span>Fabuloso</span>
+                            <span>2.288 avaliações</span>
+                        </div>
+                    </a>
+                    </li>
+                </ul>
 
+                <ul>
+                    <li>
+                        <a href="https://www.booking.com/searchresults.html?aid=2247829&sid=9255ad95b2bd9f045f0bae3df14c2f99&dest_id=-553173&dest_type=city&highlighted_hotels=381352&nflt=ht_id%3D228%3Bht_id%3D220%3Bht_id%3D213%3Bht_id%3D219%3Bht_id%3D209%3Bht_id%3D222%3Bht_id%3D201%3Bht_id%3D224%3Bht_id%3D214%3Bht_id%3D208%3Bht_id%3D232%3Bht_id%3D212%3Bht_id%3D229%3Bht_id%3D215%3Bht_id%3D223%3Bht_id%3D210%3Bht_id%3D230%3Bht_id%3D216%3Bht_id%3D227&amp;bhc_from_index=1">
+                            <img src="https://cf.bstatic.com/xdata/images/hotel/max1024x768/121399207.jpg?k=16e7a6131ee3cc1bc92346d473b167d92eb9be1a35172e03db8426b47041e91f&o=&hp=1 alt=" alt="3 Epoques Apartments by Prague Residence">
+                            <div>
+                                <h5>3 Epoques Apaetments by Prague Residence</h5>
+                                <p>Praga 1, Republica Tcheca, Prague</p>
+                                <p>A partir de <strong>R$ 631</strong> </p>
+                            </div>
+                            <div>
+                                <span> 8,8 </span>
+                                <span> Fabuloso </span>
+                                <span>. 414 avaliações</span>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+
+                <ul>
+                    <li>
+                        <a href="https://www.booking.com/searchresults.html?aid=2247829&sid=9255ad95b2bd9f045f0bae3df14c2f99&dest_id=-1456928&dest_type=city&highlighted_hotels=1338809&nflt=ht_id%3D228%3Bht_id%3D220%3Bht_id%3D213%3Bht_id%3D219%3Bht_id%3D209%3Bht_id%3D222%3Bht_id%3D201%3Bht_id%3D224%3Bht_id%3D214%3Bht_id%3D208%3Bht_id%3D232%3Bht_id%3D212%3Bht_id%3D229%3Bht_id%3D215%3Bht_id%3D223%3Bht_id%3D210%3Bht_id%3D230%3Bht_id%3D216%3Bht_id%3D227&amp;bhc_from_index=1">
+                        <img src="https://cf.bstatic.com/xdata/images/hotel/max500/45976851.jpg?k=7bd839dd07e1384ebfde004069e25090a4a901728e9bdc8e200f411ed243999d&o=)" alt="LivinParis - Luxury 3 Bedrooms Le Louvre I">
+                        <div>
+                            <h5>LivinParis - Luxury 3 Bedrooms Le Louvre I</h5>
+                            <p>Paris</p>
+                            <p>A partir de <strong>R$ 2.605</strong></p>
+                        </div>
+                        <div>
+                                <span>8,0</span>
+                                <span>Muito Bom</span>
+                                <span>. 24 avaliações</span>
+                        </div>
+                    </a>
+                    </li>
+                </ul>
+
+                <ul>
+                    <li>
+                        <a href="https://www.booking.com/searchresults.html?aid=2247829&sid=9255ad95b2bd9f045f0bae3df14c2f99&dest_id=-2167973&dest_type=city&highlighted_hotels=1794417&nflt=ht_id%3D228%3Bht_id%3D220%3Bht_id%3D213%3Bht_id%3D219%3Bht_id%3D209%3Bht_id%3D222%3Bht_id%3D201%3Bht_id%3D224%3Bht_id%3D214%3Bht_id%3D208%3Bht_id%3D232%3Bht_id%3D212%3Bht_id%3D229%3Bht_id%3D215%3Bht_id%3D223%3Bht_id%3D210%3Bht_id%3D230%3Bht_id%3D216%3Bht_id%3D227&amp;bhc_from_index=1">
+                            <img src="https://cf.bstatic.com/xdata/images/hotel/max500/69813393.jpg?k=aca2217cc21edcf3f108b94bc79ee527f8c709732b6e20815fcf4ba1f7fae991&o=)" alt="Casa Portuguesa Prata">
+                            <div>
+                                <h5>Casa Portuguesa Prata</h5>
+                                <p>Lisboa</p>
+                                <p>A partir de <strong>R$ 1.251</strong></p>
+                            </div>
+                            <div>
+                                <span>8,1 Muito bom</span>
+                                <span>. 46 avaliações</span>
+                                <span> Muito bom</span>
+                               
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </section>
+
+        <section>
+            <h2>Economize tempo, economize dinheiro</h2>
+            <p>Inscreva-se e enviaremos as melhores ofertas para você</p>
+            <form>
+                <input type="email"  placeholder="Seu e-mail:" name="email" id="email">
+                <input type="submit" value="Inscreva-se">
+                <div>
+            </form>
+        </section>
+        <div>
+            <button>
+                <a href="https://account.booking.com/sign-in">
+                    Anuncie sua propriedade</a>
+            </button>
+        <div>
+        <ul>
+            <li>
+                <a href="https://account.booking.com/sign-in">
+                    Versão para celular</a>
+            </li>
+            <li>
+                <a href="https://account.booking.com/sign-in">
+                    Sua Conta</a>
+            </li>
+            <li>
+                <a href="https://account.booking.com/sign-in">
+                    Faça alterações  em sua reserva on-line</a>
+            </li>
+            <li>
+                <a href="https://account.booking.com/sign-in">
+                    Serviço de apoio ao cliente</a>
+            </li>
+            <li>
+                <a href="https://account.booking.com/sign-in">
+                    Torna-se afiliado</a>
+            </li>
+            <li>
+                <a href="https://account.booking.com/sign-in">
+                    Booking.com for Business</a>
+            </li>
+        </ul>
+    </div>
+
+    <footer>
+        <div>
+            <ul>
+                <li>
+                    <a href="https://www.booking.com/country.pt-br.html?aid=2247829&sid=9255ad95b2bd9f045f0bae3df14c2f99">
+                        Paises
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.booking.com/region.pt-br.html?aid=2247829&sid=9255ad95b2bd9f045f0bae3df14c2f99">
+                        Regiões
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.booking.com/city.pt-br.html?aid=2247829&sid=9255ad95b2bd9f045f0bae3df14c2f99">
+                        Cidades
+                    </a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="https://www.booking.com/booking-home/index.pt-br.html?aid=2247829&sid=9255ad95b2bd9f045f0bae3df14c2f99">
+                        Casas e apartamentos
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.booking.com/apartments/index.pt-br.html?aid=2247829&sid=9255ad95b2bd9f045f0bae3df14c2f99">
+                        Apartamentos
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.booking.com/resorts/index.pt-br.html?aid=2247829&sid=9255ad95b2bd9f045f0bae3df14c2f99">
+                        Resorts
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.booking.com/villas/index.pt-br.html?aid=2247829&sid=9255ad95b2bd9f045f0bae3df14c2f99">
+                        Villas
+                    </a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="https://www.booking.com/accommodations.pt-br.html?aid=2247829&sid=9255ad95b2bd9f045f0bae3df14c2f99">
+                        Lugares únicos para ficar
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.booking.com/destination.pt-br.html?aid=2247829&sid=9255ad95b2bd9f045f0bae3df14c2f99">
+                        Todos os destinos
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.booking.com/reviews.pt-br.html?aid=2247829&sid=9255ad95b2bd9f045f0bae3df14c2f99">
+                        Avaliações
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.booking.com/extended-stays/index.pt-br.html?aid=2247829&sid=9255ad95b2bd9f045f0bae3df14c2f99">
+                        Conheça as estadias mensais
+                    </a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="http://cars.booking.com/Home.do?affiliateCode=booking-com&adplat=footer&preflang=pt-pt">
+                        Aluguel de Carros
+                    </a>
+                </li>
+                <li>
+                    <a href="https://booking.com/pxgo?aid=397594&lang=pt&url=https%3A%2F%2Fbooking.kayak.com%2Fin%3Fp%3Dfooter_link%26mc%3DBRL%26sid%3D9255ad95b2bd9f045f0bae3df14c2f99%26a%3Dbdc%252Ffooter_link%26bdclc%3Dpt-br&token=UmFuZG9tSVYkc2RlIyh9YXOod6xipXL6ogBJMWFf9qKKexl9RNLac2NpTQpM-whcbB8aqLvZ6g0MiTDrsGkb_niS3lnyVPhySxTEtOdE_W-VwVB2y5iyrUknAvf6Nd_mchNt520kVe418MXddNbOWJNBBruSE97bV2810l-JUSjFgXuIaKaJCzDvYG43hLjwXom6fzvBTySDSNQd1db5wnfQtMB3DPcrt8X7arQiZ_1dXeaPhEqCTiXSejZc9NU8sTrQP7rlxhgT912QJKT56KcGuwKfozW7ZrQ1HctuZFp0_-WMkWwPLd4R1q3vcXLdrBGkae2BX4X8bP9dELqMAQ">
+                        Pesquisa de voos
+                    </a>
+                </li>
+                <li>
+                    <a href="http://www.opentable.com/?ref=16087">
+                        Reservas de restaurantes
+                    </a>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a href="https://www.booking.com/covid-19-booking-faqs.pt-br.html?aid=397594&label=gog235jc-1DCAEoggI46AdILVgDaCCIAQGYAS24ARfIARXYAQPoAQH4AQKIAgGoAgO4As3ZmpwGwAIB0gIkMjdjNDA0MGMtM2JhMC00MjczLTg0YzYtODY4ODNhMGYwNzI22AIE4AIB&sid=9255ad95b2bd9f045f0bae3df14c2f99">
+                        Perguntas Frequentes sobre o Coronavírus (COVID-19)
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.booking.com/content/about.pt-br.html?aid=397594&label=gog235jc-1DCAEoggI46AdILVgDaCCIAQGYAS24ARfIARXYAQPoAQH4AQKIAgGoAgO4As3ZmpwGwAIB0gIkMjdjNDA0MGMtM2JhMC00MjczLTg0YzYtODY4ODNhMGYwNzI22AIE4AIB&sid=9255ad95b2bd9f045f0bae3df14c2f99">
+                        Sobre a Booking.com
+                    </a>
+                </li>
+                <li>
+                    <a href="https://secure.booking.com/help.pt-br.html?aid=397594&label=gog235jc-1DCAEoggI46AdILVgDaCCIAQGYAS24ARfIARXYAQPoAQH4AQKIAgGoAgO4As3ZmpwGwAIB0gIkMjdjNDA0MGMtM2JhMC00MjczLTg0YzYtODY4ODNhMGYwNzI22AIE4AIB&sid=9255ad95b2bd9f045f0bae3df14c2f99&source=footer_navigation#/?source=footer_navigation">
+                        Serviço de Apoio ao Cliente
+                    </a>
+                </li>
+                <li>
+                    <a href="https://partner.booking.com/en-gb?utm_campaign=footer_list&utm_medium=frontend_footer&utm_source=booking.com">
+                        Central de Ajuda ao Parceiro
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div>
+            <a href="https://account.booking.com/sign-in?">
+                Acesso à Extranet
+            </a>
+        </div>
+    </footer>
 
 </body>
 </html>
