--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
     <title>Booking.com | Site oficial | Os melhores hotéis, voos, alugéis de carro e acomodações</title>
 </head>
 <body>
-    <header>
-        <nav>
+    <header id="header-content">
+        <nav class="Logo">
             <p>Booking.com</p>
-            <div>
-                <button>BRL</button>
-                <button>
+            
+           <div class="row-center">
+            <div class="row-center">
+                <button id="brl-button">BRL</button>
+                <button id="button-language">
                     <img src="assets/bandeira-br.png" alt="Moeda Brasil">
                 </button>
-                <a href="https://secure.booking.com/content/cs.pt-br.html?aid=2247829&sid=3a041596f3eabc2562c0ed57b0a2201b&source=https%3A%2F%2Fsecure.booking.com%2Fhelp.pt-br.html%3Faid%3D2247829%26sid%3D3a041596f3eabc2562c0ed57b0a2201b%26source%3Dheader&">?</a>
+                <a id="info-button" href="https://secure.booking.com/content/cs.pt-br.html?aid=2247829&sid=3a041596f3eabc2562c0ed57b0a2201b&source=https%3A%2F%2Fsecure.booking.com%2Fhelp.pt-br.html%3Faid%3D2247829%26sid%3D3a041596f3eabc2562c0ed57b0a2201b%26source%3Dheader&">?</a>
             </div>
 
-            <div>
+            <div id="actions">
                 <button>
                     <a href="https://join.booking.com/?lang=pt-br&utm_source=topbar&utm_medium=frontend&amp;label=&amp;aid=2247829">
                     Anuncie sua propriedade
@@ -39,36 +41,37 @@
                 </a>
             </button>
             </div>
+           </div>
         </nav>
 
-        <nav>
-        <ul>
+        <nav id="menu-options">
+        <ul class="row-center">
             <li>
-                <a href="https://www.booking.com/index.pt-br.html?label=gen173bo-1DCAEoggI46AdILVgDaCCIAQGYAS24ARfIARXYAQPoAQH4AQSIAgGYAiGoAgO4AuDl_5sGwAIB0gIkMDRjMjg3YzMtZWVlZC00YTViLWE5N2YtMDdmYTQzODg3NjFi2AIE4AIB&sid=3a041596f3eabc2562c0ed57b0a2201b">
+                <a href="https://www.booking.com/index.pt-br.html?label=gen173bo-1DCAEoggI46AdILVgDaCCIAQGYAS24ARfIARXYAQPoAQH4AQSIAgGYAiGoAgO4AuDl_5sGwAIB0gIkMDRjMjg3YzMtZWVlZC00YTViLWE5N2YtMDdmYTQzODg3NjFi2AIE4AIB&sid=3a041596f3eabc2562c0ed57b0a2201b" class="row-center">
                     <img src="assets/icons/hospedagem.svg" alt="Logo hospedagem">
                 <span>Hospedagens</span>
                 </a>
             </li>
             <li>
-                <a href="https://flights-br.gotogate.com">
+                <a href="https://flights-br.gotogate.com" class="row-center">
                     <img src="assets/icons/voos.svg" alt="Logo voos">
                     <span>Voos</span>
                 </a>
             </li>
             <li>
-                <a href="https://www.booking.com/cars/index.pt-br.html?label=gen173bo-1DCAEoggI46AdILVgDaCCIAQGYAS24ARfIARXYAQPoAQH4AQSIAgGYAiGoAgO4AuDl_5sGwAIB0gIkMDRjMjg3YzMtZWVlZC00YTViLWE5N2YtMDdmYTQzODg3NjFi2AIE4AIB&sid=3a041596f3eabc2562c0ed57b0a2201b&adplat=cross_product_bar&">
+                <a href="https://www.booking.com/cars/index.pt-br.html?label=gen173bo-1DCAEoggI46AdILVgDaCCIAQGYAS24ARfIARXYAQPoAQH4AQSIAgGYAiGoAgO4AuDl_5sGwAIB0gIkMDRjMjg3YzMtZWVlZC00YTViLWE5N2YtMDdmYTQzODg3NjFi2AIE4AIB&sid=3a041596f3eabc2562c0ed57b0a2201b&adplat=cross_product_bar&" class="row-center">
                     <img src="assets/icons/carros.svg" alt="Logo carros">
                     <span>Aluguel de carros</span>
                 </a>
             </li>
             <li>
-                <a href="https://www.booking.com/attractions/index.pt-br.html?label=gen173bo-1DCAEoggI46AdILVgDaCCIAQGYAS24ARfIARXYAQPoAQH4AQSIAgGYAiGoAgO4AuDl_5sGwAIB0gIkMDRjMjg3YzMtZWVlZC00YTViLWE5N2YtMDdmYTQzODg3NjFi2AIE4AIB&sid=3a041596f3eabc2562c0ed57b0a2201b">
+                <a href="https://www.booking.com/attractions/index.pt-br.html?label=gen173bo-1DCAEoggI46AdILVgDaCCIAQGYAS24ARfIARXYAQPoAQH4AQSIAgGYAiGoAgO4AuDl_5sGwAIB0gIkMDRjMjg3YzMtZWVlZC00YTViLWE5N2YtMDdmYTQzODg3NjFi2AIE4AIB&sid=3a041596f3eabc2562c0ed57b0a2201b" class="row-center">
                     <img src="assets/icons/atracoes.svg" alt="atraçoes">
                     <span>Atrações</span>
                 </a>
             </li>
             <li>
-                <a href="https://www.booking.com/taxi/index.pt-br.html?label=gen173bo-1DCAEoggI46AdILVgDaCCIAQGYAS24ARfIARXYAQPoAQH4AQSIAgGYAiGoAgO4AuDl_5sGwAIB0gIkMDRjMjg3YzMtZWVlZC00YTViLWE5N2YtMDdmYTQzODg3NjFi2AIE4AIB&sid=3a041596f3eabc2562c0ed57b0a2201b&adplat=cross_product_bar&">
+                <a href="https://www.booking.com/taxi/index.pt-br.html?label=gen173bo-1DCAEoggI46AdILVgDaCCIAQGYAS24ARfIARXYAQPoAQH4AQSIAgGYAiGoAgO4AuDl_5sGwAIB0gIkMDRjMjg3YzMtZWVlZC00YTViLWE5N2YtMDdmYTQzODg3NjFi2AIE4AIB&sid=3a041596f3eabc2562c0ed57b0a2201b&adplat=cross_product_bar&" class="row-center">
                     <img src="assets/icons/taxi.svg" alt="taxi">
                     <span>Táxis (aeroporto)</span>
                 </a>
