--- a/index.html
+++ b/index.html
@@ -137,14 +137,14 @@
                     </button>
                 </li>
 
-                <li>
+                <li class="app-banner">
                     <div>
                     <h4> Sua viagem toda em um só app</h4>
                     <p>Encontre o melhor das estadias, voos e muito mais no app grátis da Booking.com
                     </p>
                     
                     <button>
-                        <a href="">Baixar app</a>
+                        <a href="https://play.google.com/store/apps/details?id=com.booking&hl=pt_BR&gl=US">Baixar app</a>
                     </button>
                 </div>
 
