--- a/index.html
+++ b/index.html
@@ -390,12 +390,12 @@
                 <div>
             </form>
         </section>
-        <div>
+        <div id="sales">
             <button>
                 <a href="https://account.booking.com/sign-in">
                     Anuncie sua propriedade</a>
-            </button>
-        <div>
+    </button>
+     <div id="sales-options">
         <ul>
             <li>
                 <a href="https://account.booking.com/sign-in">
@@ -423,13 +423,14 @@
             </li>
         </ul>
     </div>
+    </div>
 
     <footer>
-        <div>
+        <div class="footer-options">
             <ul>
                 <li>
                     <a href="https://www.booking.com/country.pt-br.html?aid=2247829&sid=9255ad95b2bd9f045f0bae3df14c2f99">
-                        Paises
+                        Países
                     </a>
                 </li>
                 <li>
